--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible"  content="IE=edge,chrome=1">
 
-    <title>iMac Slider - jQuery Slider Plugin</title>
+    <title>iMac Slider - jQuery Slider Plugin - "Teste com GIT e GITHUB"</title>
 
     <style>
       body {
